# chatbot-Agent

./: GPTv2.py  server.py
backend/: .env  .gitignore  MemoryManagment.py  SimpleGPT.py  dataFlow.dio  pyproject.toml  requirenment.txt  server.py  test_weather.py
frontend/: index.html
memroy_manager/: LTM.py  STM.py  __init__.py
tools/: __init__.py  summary.py  weather.py
